<resources>
    <string name="app_name">Thang đánh giá Cars</string>
    <string name="todo">TODO</string>
    <string name="CARS">Chào Mừng Bạn Đến Với CARS</string>
    <string name="Đăng_Nhập">Đăng Nhập</string>
    <string name="Tài_Khoản">Tài Khoản</string>
    <string name="Mật_Khẩu">Mật Khẩu</string>
    <string name="cauhoi">Bạn Chưa Có Tài Khoản ?</string>
    <string name="Đăng_Kí_tK_login">Đăng Kí Tài Khoản</string>
    <string name="đăng_kí">Đăng Kí Tài Khoản</string>
    <string name="cauhoi1">Nếu Bạn Đã Có Tài Khoản Xin Vui Lòng Quay Trở Lại !</string>
    <string name="RQMatKhau">Nhập Lại Mật Khẩu</string>
    <string name="splash_text">Ứng Dụng CARS </string>
    <string name="dktk">Đăng Kí Tài Khoản</string>
    <string name="Tb_SingUp">Không Đươc Để Trống Thông Tin</string>
    <string name="loginsuccess">LoginSuccess</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Trang Chủ</string>
    <string name="menu_me">Thêm Thêm Thông Tin Người Dùng</string>
    <string name="menu_slideshow">Tiện Ích</string>
    <string name="hovaten">Họ và tên bé :</string>
    <string name="thongtincanhan">Thông Tin Cá Nhân</string>
    <string name="ns">Ngày Sinh :</string>
    <string name="gt">Giới Tính :</string>
    <string name="nam">Nam</string>
    <string name="nữ">Nữ</string>
    <string name="nt">Nơi ở :</string>
    <string name="tt">Thành Thị</string>
    <string name="nthon">Nông Thôn</string>
    <string name="nnb">Nghề Nghiệp Bố :</string>
    <string name="nnm">Nghề Nghiệp Mẹ :</string>
    <string name="cs">Cách Sinh :</string>
    <string name="st">Sinh Thường</string>
    <string name="sm">Sinh mổ</string>
    <string name="sinh">Sinh :</string>
    <string name="kn">Khóc ngay</string>
    <string name="kkn">Không khóc ngay</string>
    <string name="dt">Đủ Tháng</string>
    <string name="thieuthang">Thiếu Tháng</string>
    <string name="nthien">Ngày Thực Hiện</string>
    <string name="l_u_th_ng_tin">Lưu Thông Tin</string>
    <string name="sinh1">Sinh :</string>
    <string name="todo1">TODO</string>
    <string name="trang_ch">Trang Chủ</string>
    <string name="todo2">TODO</string>
    <string name="k_t_qu">Kết Quả</string>
    <string name="todo3">TODO</string>
    <string name="b_n_th_n">Bản Thân</string>
    <string name="kh_a_h_c">Khóa Học</string>
    <string name="ng_xu_t">Đăng Xuất</string>
    <string name="trang_ch1">Trang Chủ</string>
    <string name="banthan">Bản Thân</string>
    <string name="h_v_t_n">Họ Và Tên</string>
    <string name="m_s">Mã Số</string>
    <string name="th_ng_tin_chung">Thông Tin Chung</string>
    <string name="ch_nh_s_a_th_ng_tin_c_a_b">Chỉnh Sửa Thông Tin Của Bé</string>
    <string name="danh_m_c">Danh Mục</string>
    <string name="menu_gallery">Gallery</string>
    <string name="user">user</string>
    <string name="th_ng_tin_v_ng_d_ng">Thông Tin Về Ứng Dụng </string>
    <string name="ng_xu_t1">Đăng xuất</string>
    <string name="nav_drawer_open">Open navigation drawer </string>
    <string name="nav_drawer_close">Close navigation drawer </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_demo">demo</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="kiemtra1">Quan Hệ Xã Hội</string>
    <string name="kiemtra2">Bắt Trước</string>
    <string name="kiemtra3">Đáp Ứng Tình Cảm</string>
    <string name="kiemtra4">Các Tác Động Cơ Thể</string>
    <string name="kiemtra5">Sử Dụng Đồ Vật</string>
    <string name="kiemtra6">Thích Nghi Với Sự Thay Đổi</string>
    <string name="kiemtra7">Phản Ứng Thị Giác</string>
    <string name="kiemtra8">Phản Ứng Thính Giác</string>
    <string name="kiemtra9">Phản Ứng Qua Vị Giác</string>
    <string name="kiemtra10">Sợ Hãi Hoặc Hồi Hộp</string>
    <string name="kiemtra11">Giao Tiếp Bằng Lời</string>
    <string name="kiemtra12">Giao Tiếp Không Lời</string>
    <string name="kiemtra13">Mức Độ Họat Động</string>
    <string name="kiemtra14">Đáp Ứng Trí Tuệ</string>
    <string name="kiemtra15">Ấn Tượng Chung</string>
    <string name="qhxh_m1"> 1. Không biểu hiện khó khăn hoặc bất thường trong quan hệ với mọi người.Hành vi của trẻ tương ứng với tuổi . Một chút nhút nhát, nhắng nhít hoặc khó chịu khi bị yêu cầu làm một việc gì đó để quan sát, nhưng không tới mức độ bất thường.</string>
    <string name="qhxh_1_5"> 1.5. Bình Thường</string>
    <string name="qhxh_2"> 2. Một chút bất thường trong quan hệ với mọi người.Trẻ có thể tránh nhìn vào mắt người lớn, tránh xa người lớn hoặc trở nên om sòm khi bị bắt buộc tương tác với ai đó, quá bẽn lẽn, không có phản ứng với người lớn giống như trẻ bình thường hoặc bám chặt vào bố mẹ nhiều hơn trẻ cùng tuổi.</string>
    <string name="qhxh_2_5"> 2.5. Một Chút Bất Thường</string>
    <string name="qhxh_3"> 3. Bất thường ở mức độ trung bình trong quan hệ với mọi người. Thỉnh thoảng trẻ thể hiện thái độ xa lánh (dường như không nhận thức hoặc không quan tâm đến người lớn). Để thu hút sự chú ý của trẻ, đôi khi cần có những nỗ lực liên tục và mạnh mẽ. Trẻ vẫn duy trì giao tiếp nhưng ở mức rất hạn chế</string>
    <string name="qhxh_3_5"> 3.5. Bất thường ở mức độ trung bình</string>
    <string name="qhxh_4"> 4. Bất thường ở mức độ nghiêm trọng trong quan hệ với mọi người. Trẻ luôn tách biệt hoặc không nhận ra được những việc người lớn đang tác động đến trẻ. Trẻ hầu như không bao giờ đáp ứng hoặc chủ động tiếp xúc với người lớn. Với bất kỳ tác động nào, chỉ có những nỗ lực liên tục nhất mới nhận được sự chú ý của trẻ.</string>
    <string name="canhan">Cá Nhân</string>
    <string name="k_t_qu_m_c">Kết Quả Mức Độ</string>
    <string name="danhgia">Đánh Giá Ứng Dụng</string>
    <string name="danhgiaungdung">Đánh Giá Ứng Dụng</string>
    <string name="tk">Tài Khoản</string>
    <string name="ng_k_t_i_kho_n_m_i">Đăng Kí Tài Khoản Mới</string>
    <string name="th_ng_tin_ng_d_ng">Thông Tin Ứng Dụng</string>
    <string name="ch_th_ch_v_b_ng_nh_gi">Chú Thích Về Bảng Đánh Giá</string>
    <string name="b_n_th_n1">Bản Thân</string>
    <string name="k_t_qu_nh_gi">Kết Quả Đánh Giá</string>
    <string name="ki_m_tra_m_c_t_k">Kiểm Tra Mức Độ Tự Kỉ</string>
    <string name="ng_xu_t12">Đăng Xuất Tài Khoản</string>
    <string name="singupsuccess">SingupSuccess</string>
    <string name="c_c_bi_u_hi_n">Các biểu hiện:</string>
    <string name="l_u_nh_gi_m_c_1">Lưu Đánh Giá Mục 1</string>
    <string name="battrc1"> 1. Bắt chước giống như trẻ bình thường khác. Trẻ có thể bắt chước âm thanh, từ và các hành động phù hợp với khả năng của chúng</string>
    <string name="battrc2"> 2. Bất thường ở mức độ nhẹ về kỹ năng bắt chước. Hầu hết số lần yêu cầu, trẻ bắt chước được các hành vi đơn giản như vỗ tay hoặc phát ra các âm thanh đơn lẻ, đôi khi chỉ bắt chước sau khi được khích lệ hoặc sau một thời gian chờ đợi.</string>
    <string name="battrc3"> 3. Bất thường mức độ trung bình về kỹ năng bắt chước. Trẻ chỉ bắt chước được một phần yêu cầu và đòi hỏi sự giúp đỡ liên tục của người lớn; Sự bắt chước đôi khi sau một thời gian chờ đợi.</string>
    <string name="battrc4"> 4. Bất thường ở mức độ nghiêm trọng về kỹ năng bắt chước. Trẻ rất ít khi hoặc không bao giờ bắt chước âm thanh, từ ngữ hoặc các hành động ngay cả khi có sự khích lệ và giúp đỡ của người lớn</string>
    <string name="btnmuc2">Lưu Đánh Giá Mục 2</string>
    <string name="dapungtinhcam1"> 1. Đáp ứng tình cảm phù hợp với tuổi và phù hợp với hoàn cảnh. Trẻ cho thấy sự đáp ứng phù hợp về thể loại và mức độ tình cảm thông qua sự thay đổi biểu cảm trên nét mặt, điệu bộ và thái độ</string>
    <string name="dapungtinhcam2"> 2. Bất thường ở mức độ nhẹ về đáp ứng tình cảm. Đôi khi trẻ biểu lộ cách thức và mức độ đáp ứng tình cảm không phù hợp với tuổi. Đáp ứng đó đôi khi không liên quan đến đối tượng hoặc sự việc xung quanh</string>
    <string name="puthinggiac1"> 1. Phản ứng bằng thính giác phù hợp với tuổi. Khả năng nghe bình thường và phù hợp với tuổi. Thính giác được phối hợp cùng với các giác quan khác.</string>
    <string name="puthinggiac2"> 2. Bất thường nhỏ về hoạt động của thính giác. Trẻ đôi khi không phản ứng hoặc phản ứng nhẹ với một số loại âm thanh nhất định. Có thể phản ứng chậm trễ với âm thanh , và âm thanh cần được nhắc lại để lôi kéo sự chú ý của trẻ. Trẻ có thể bị phân tán bởi âm thanh bên ngoài</string>
    <string name="puthinggiac3"> 3. Bất thường ở mức trung bình về khả năng nghe. Trẻ phản ứng với nhiều loại âm thanh; Luôn bỏ qua âm thanh sau những lần nghe đầu tiên; Có thể giật mình hoặc bịt tai khi nghe thấy những âm thanh thường ngày</string>
    <string name="puthinggiac4"> 4. Bất thường nghiêm trọng về hoạt động của thính giác: Trẻ quá phản ứng hoặc phản ứng dưới mức bình thường với âm thanh ở một mức độ khác thường cho dù đó là loại âm thanh nào</string>
    <string name="l_u_nh_gi_c_m_c_8">Lưu Đánh Giác Mục 8</string>
    <string name="giaotiepbangloi1"> 1. Giao tiếp bằng lời bình thường phù hợp với tuổi và tình huống.</string>
    <string name="giaotiepbangloi2"> 2. Bất thường nhẹ về giao tiếp bằng lời. Trẻ chậm nói. Hầu hết lời nói có nghĩa; tuy nhiên có thể xuất hiện sự lặp lại máy móc hoặc phát âm bị đảo lộn. Đôi khi trẻ dùng một số từ khác thường hoặc không rõ nghĩa</string>
    <string name="giaotiepbangloi3"> 3. Bất thường ( mức độ trung bình) về giao tiếp bằng lời. Có thể không nói. Khi nói, giao tiếp bằng lời có thể lẫn lộn giữa những lời nói có nghĩa và không rõ nghĩa, lặp lại máy móc, hoặc phát âm đảo lộn. Lời nói có nghĩa cũng có khác thường như: câu hỏi thừa, Những khác thường trong ngôn ngữ giao tiếp có nghĩa bao gồm những câu hỏi thừa hoặc bận tâm, lo lắng về một chủ đề nào đó</string>
    <string name="giaotiepbangloi4"> 4 .Bất thường nghiêm trọng về giao tiếp bằng lời. Lời nói không có nghĩa (không nói hay sử dụng ngôn ngữ tự phát, vô nghĩa). Trẻ kêu thét như trẻ mới sinh. Phát những âm thanh kỳ lạ hay những tiếng kêu của động vật. Có những âm thanh phức tạp gần giống ngôn ngữ. Phát âm lặp lại một số từ hay moat số câu có nghĩa.</string>
    <string name="l_u_nh_gi_m_c_11">Lưu Đánh Giá Mục 11</string>
    <string name="dutt1"> 1. Đáp ứng trí tuệ bình thường, phú hợp với tuổi. Trẻ cĩ mức độ hiểu biết như những trẻ bình thường v khơng cĩ hiểu biết khc thường hoặc cĩ vấn đề</string>
    <string name="dutt2"> 2. Bất thường nhẹ về trí tuệ: Trẻ không thông minh như những trẻ bình thường cùng lứa tuổi; kỹ năng hơi chậm trên các lĩnh vực.</string>
    <string name="dutt3"> 3. Bất thường (trung bình)về trí tuệ. Trẻ không thông minh như những trẻ bình thường cùng tuổi; tuy nhiên, trẻ có thể có chức năng gần như bình thường đối với một số lĩnh vực có liên quan đến trí tuệ.</string>
    <string name="dutt4"> 4. Bất thường nghiêm trọng về trí tuệ. Trẻ thường không thông minh như những trẻ khác cùng lứa tuổi, nhưng trẻ có thể làm tốt hơn trẻ bình thường cùng tuổi trong một hoặc nhiều lĩnh vực.</string>
    <string name="l_u_m_c_nh_gi_14">Lưu Mục Đánh Giá 14</string>
</resources>