<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListTest.activity_11giaotiepbangloi">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar11"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_16toplr"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:gravity="center">

        <TextView
            android:id="@+id/toolbar_title11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="Mục 11 "
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/c_c_bi_u_hi_n"
            android:textStyle="italic|bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

                <RadioButton
                    android:id="@+id/rdo11_radiobutton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:button="@drawable/radiobuttonchecked"
                    android:paddingStart="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/giaotiepbangloi1"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rdo11_radiobutton15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:button="@drawable/radiobuttonchecked"
                    android:paddingStart="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/qhxh_1_5"
                    android:textSize="15sp"
                    tools:ignore="TouchTargetSizeCheck" />


                <RadioButton
                    android:id="@+id/rdo11_radiobutton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:button="@drawable/radiobuttonchecked"
                    android:paddingStart="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/giaotiepbangloi2"
                    android:textSize="15sp" />


                <RadioButton
                    android:id="@+id/rdo11_radiobutton25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:button="@drawable/radiobuttonchecked"
                    android:minHeight="48dp"
                    android:paddingStart="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/qhxh_2_5"
                    android:textSize="15sp" />


                <RadioButton
                    android:id="@+id/rdo11_radiobutton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:button="@drawable/radiobuttonchecked"
                    android:paddingStart="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/giaotiepbangloi3"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rdo11_radiobutton35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:button="@drawable/radiobuttonchecked"
                    android:minHeight="48dp"
                    android:paddingStart="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/qhxh_3_5"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rdo11_radiobutton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:button="@drawable/radiobuttonchecked"
                    android:paddingStart="50dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/giaotiepbangloi4"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/l_u_nh_gi_m_c_11"
                android:textColor="@drawable/textcolorluugiatri" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>